--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta http-equiv="refresh"
-   content="0; url=https://args-engine.github.io/Args-Engine">
+   content="0; url=https://legion-engine.github.io/Legion-Engine">
    <title>Redirect</title>
 </head>
 <body>
